
  * debian/control:
    + Flip Maintainer and Uploaders. I'm pretty inactive these days.
    + Nuke DM-Upload-Allowed.
  * Explicitely use source format 1.0 due to the quilt magic we are using to
    built mutt-patched.
  * Switch to tokyocabinet (Closes: #530670)
  * Instead of trying to maintain the PATCHES file, put "quilt applied" output
    there.

 -- Christoph Berg <myon@debian.org>  Sun, 30 May 2010 23:20:21 +0200

mutt (1.5.20-7) unstable; urgency=low

  * debian/NEWS: backported a note about the new behavior with attachments
    on the command line (Closes: 539276)
  * debian/patches:
    + upstream/548494-swedish-intl.patch: fixes to Swedish translation 
      (Closes: 548494)
    + upstream/553238-german-intl.patch: small fix to the German translation
      (Closes: 553238)
    + upstream/553321-ansi-escape-segfault.patch: prevent mutt from segfaulting
      with large ASCII escape sequences (Closes: 553321)
    + upstream/557395-muttrc-crypto.patch: small fix to the muttrc man 
      (Closes: 557395)
    + upstream/545316-header-color.patch: do not store the color in header cache
      (Closes: 545316)
    + upstream/568295-references.patch: preserve the References header if the
      In-Reply-To is not initially present (Closes: 568295)
    + upstream/547980-smime_keys-chaining.patch: support certificate chaining in
      smime_keys (Closes: 547980, 549006)
    + upstream/528233-readonly-open.patch: open attachments in read-only 
      (Closes: 528233)
    + upstream/228671-pipe-mime.patch: don't mess up the terminal while piping
      attachments (Closes: 228671)
    + upstream/383769-score-match.patch: match full name with ~f, same as
      mutt-ng (Closes: 383769)
    + upstream/547739-manual-typos.patch: typos in manual.txt (Closes: 547739)
    + upstream/311296-rand-mktemp.patch: more random file creation in /tmp, see
      CVE CAN-2005-2351 (Closes: 311296)
    + debian-specific/Muttrc: set time_inc to be 250ms (Closes: 537746)